--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -4,7 +4,7 @@
 	<title>Código Postal México</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
+	<link rel="stylesheet" href="css/jquery.mobile-1.3.2.min.css" />
 	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
 	
@@ -72,7 +72,7 @@
 		
 	</div>
 	<div data-role="page" id="lista">
-	  <div data-role="header">
+	  <div data-role="header" data-position="fixed">
 	       <a href="#" data-rel="back" data-icon="back" data-iconpos="notext" data-theme="b" data-iconshadow="false" data-inline="true">Regresar</a>
 		    <h1>Buscar Código Postal en México</h1>
 	  </div>
